# MCP_SERVER_Expense_Tracker

./: GUIDE.md  README.md  config.py  db.py  pyproject.toml  server.py
data/: categories.json  expenses.db
outputs/: expenses_2025-01-01_to_2025-01-15.csv
reports/: expense_report_2023-01-01_to_2026-01-01.html  expense_report_2025-01-01_to_2025-02-01.html
services/: analytics_service.py  expenses_service.py  io_service.py  reports_service.py
utils/: dates.py  generate_synthetic_data.py  generate_tax_deductible_seed.py  synthetic_expenses_2023_2026.csv  tax_deductible_seed.csv
